--- a/index.html
+++ b/index.html
@@ -19,35 +19,36 @@
 		
 		<h1>December 29-31</h1>
 		<h2>Guest Speakers Include</h2>
-		
-		<table>
-			<tr>
-				<td>
-					<figure>
-						<img src="Images/Neale_Donald_Walsch.jpg" alt="Neale Donald Walsch" style="max-width: 165px;">
-					</figure>
-					<figcaption><strong>Neale Donald Walsch</strong></figcaption>
-				</td>
-				<td>
-					<figure>
-						<img src="Images/deepakchopra.jpg" alt="Deepak Chopra" style="max-width: 165px;">
-					</figure>
-					<figcaption><strong>Deepak Chopra</strong></figcaption>
-				</td>
-				<td>
-					<figure>
-						<img src="Images/Jean_Shinoda_Bolen.jpg" alt="Jean Shinoda Bolen" style="max-width: 165px;">
-					</figure>
-					<figcaption><strong>Jean Shinoda Bolen</strong></figcaption>
-				</td>
-				<td>
-					<figure>
-						<img src="Images/tonyrobins.jpg" alt="Tony Robins" style="max-width: 165px;">
-					</figure>
-					<figcaption><strong>Tony Robins</strong></figcaption>
-				</td>
-			</tr>
-		</table>
+		<div class="table">
+			<table>
+				<tr>
+					<td>
+						<figure>
+							<img src="Images/Neale_Donald_Walsch.jpg" alt="Neale Donald Walsch" style="max-width: 165px;">
+						</figure>
+						<figcaption><strong>Neale Donald Walsch</strong></figcaption>
+					</td>
+					<td>
+						<figure>
+							<img src="Images/deepakchopra.jpg" alt="Deepak Chopra" style="max-width: 165px;">
+						</figure>
+						<figcaption><strong>Deepak Chopra</strong></figcaption>
+					</td>
+					<td>
+						<figure>
+							<img src="Images/Jean_Shinoda_Bolen.jpg" alt="Jean Shinoda Bolen" style="max-width: 165px;">
+						</figure>
+						<figcaption><strong>Jean Shinoda Bolen</strong></figcaption>
+					</td>
+					<td>
+						<figure>
+							<img src="Images/tonyrobins.jpg" alt="Tony Robins" style="max-width: 165px;">
+						</figure>
+						<figcaption><strong>Tony Robins</strong></figcaption>
+					</td>
+				</tr>
+			</table>
+		</div>
 		
 		<p>
 			LOCATION: The event is held in Medford, Oregon, at the Rogue Regency Inn & Suites. Hotel accommodations are not included in the regular price of the conference registration. There are rooms available in the facility where the retreat is taking place (the Rogue Regency Inn & Suites) at the discounted rate of $89/night for single or double occupancy. For reservations, please call 541-770-1234 and request the "Conversations with God" group rate. To receive this group rate, reservations must be made well in advance. Persons reserving rooms very near the program start date will be quoted the hotel's regular room rate.
