Lost code from committing gh pages
Re-added code from gh-pages

--- a/index.html
+++ b/index.html
@@ -22,16 +22,30 @@
 		
 		<table>
 			<tr>
-				<td><img src="Images/Neale_Donald_Walsch.jpg" alt="Neale Donald Walsch" style="max-width: 165px;"></td>
-				<td><img src="Images/deepakchopra.jpg" alt="Deepak Chopra" style="max-width: 165px;"></td>
-				<td><img src="Images/Jean_Shinoda_Bolen.jpg" alt="Jean Shinoda Bolen" style="max-width: 165px;"></td>
-				<td><img src="Images/tonyrobins.jpg" alt="Tony Robins" style="max-width: 165px;"></td>
-			</tr>
-			<tr>
-				<td><strong>Neale Donald Walsch</strong></td>
-				<td><strong>Deepak Chopra</strong></td>
-				<td><strong>Jean Shinoda Bolen</strong></td>
-				<td><strong>Tony Robins</strong></td>
+				<td>
+					<figure>
+						<img src="Images/Neale_Donald_Walsch.jpg" alt="Neale Donald Walsch" style="max-width: 165px;">
+					</figure>
+					<figcaption><strong>Neale Donald Walsch</strong></figcaption>
+				</td>
+				<td>
+					<figure>
+						<img src="Images/deepakchopra.jpg" alt="Deepak Chopra" style="max-width: 165px;">
+					</figure>
+					<figcaption><strong>Deepak Chopra</strong></figcaption>
+				</td>
+				<td>
+					<figure>
+						<img src="Images/Jean_Shinoda_Bolen.jpg" alt="Jean Shinoda Bolen" style="max-width: 165px;">
+					</figure>
+					<figcaption><strong>Jean Shinoda Bolen</strong></figcaption>
+				</td>
+				<td>
+					<figure>
+						<img src="Images/tonyrobins.jpg" alt="Tony Robins" style="max-width: 165px;">
+					</figure>
+					<figcaption><strong>Tony Robins</strong></figcaption>
+				</td>
 			</tr>
 		</table>
 		
@@ -44,12 +58,14 @@
 			Please 'click' on one of the following options to select your price:
 		</p>
 		
+		<div class="list">
 		<ul>
 			<li>I wish to pay $225 USD to attend the Holiday Retreat</li>
 			<li>I wish to pay $325 USD to attend the Holiday Retreat</li>
 			<li>I wish to pay $525 USD to attend the Holiday Retreat</li>
 			<li>I wish to pay $825 USD to attend the Holiday Retreat</li>
 		</ul>
+		</div>
 		
 		<p>
 			<strong>Thank you for your interest in this very special spiritual renewal retreat. 
@@ -57,8 +73,8 @@
 		</p>
 	</div>
 	<div id="cancel">
-		<h3>CANCELLATION POLICY</h3>
 		<p>
+			<strong>CANCELLATION POLICY</strong><br>
 			Payment is required in full at time of registration. A cancellation fee of 35% of the amount you choose in the Flex-Plan will be charged for cancellations made more than 30 days prior to the event start date. NO REFUND CAN BE ISSUED if you cancel LESS THAN 30 DAYS PRIOR TO EVENT START DATE, as we will have held a place for you, and it will be in most cases too late for others to book your space. We know that you understand.
 		</p>
 	</div>
